@@ -1,3 +1,10 @@
+2005-01-25 00:03 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Percentages.m: Reformatted some code
+	* TimeMonColors.m: Reformatter some code
+	* TimeMonP.png: Composited icon and "NO" sign
+	* TimeMonWraps.m: Changed colors
+
 2005-01-23 22:47 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* English.lproj/TimeMon.gorm: Added readmeText outlet and 
